Début de la mise en page avec CSS

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="connexion.html">Se connecter</a></li>
-            <li><a href="create.hmtl">Créer un compte</a></li>
+            <li><a href="create.html">Créer un compte</a></li>
         </ul>
     </nav>
 
 
-    <section>
+    <section class="sec_1">
         <aside>
             <h1>Titre du livre : </h1>
             <p>Auteur du livre </p>
@@ -40,7 +40,7 @@
     </section>
 
 
-    <section>
+    <section class="sec_2">
         <aside>
             <h1>Titre du livre : 2</h1>
             <p>Auteur du livre </p>
