--- a/create.html
+++ b/create.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Accueil</a></li>
+            <li><a href="index.html">Parcourir la bibliothèque</a></li>
             <li><a href="connexion.html">Se connecter</a></li>
             <li><a href="create.html">Créer un compte</a></li>
         </ul>
