avancement des mise en page, création de la page accueil

--- a/create.html
+++ b/create.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">Parcourir la bibliothèque</a></li>
             <li><a href="connexion.html">Se connecter</a></li>
-            <li><a href="create.html">Créer un compte</a></li>
+            <li><a class="active">Créer un compte</a></li>
         </ul>
     </nav>
 
