mise en place du formulaire sur la page de création, ajustement de la page de connexion

--- a/connexion.html
+++ b/connexion.html
@@ -47,11 +47,11 @@
             <label for="email">Email:</label>
             <br>
             <input type="text">
-            <br>
-            <label for="lname">Mot de passe:</label>
+            <br><br>
+            <label for="password">Mot de passe:</label>
             <br>
             <input type="password">
-            <br>
+            <br><br>
             <br>
             <input type="submit" value="Se connecter" class="connect">
         </form>
